[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/characters/scripts/character.gd" type="Script" id=1]
[ext_resource path="res://entities/characters/scripts/state_label.gd" type="Script" id=2]

[node name="CharacterTemplate" type="KinematicBody2D" groups=[
"debug",
]]
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="MoveTween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="StateLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
grow_horizontal = 2
text = "STATE"
align = 1
script = ExtResource( 2 )
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
